[DATALAB-2090]: Fixed sticky footer on audit on safari

--- a/services/self-service/src/main/resources/webapp/src/app/reports/audit/audit-grid/audit-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reports/audit/audit-grid/audit-grid.component.scss
@@ -20,6 +20,8 @@
 .audit-table-wrapper {
   width: 100%;
   max-height: calc(100vh - 130px);
+  max-height: -moz-calc(100vh - 130px);
+  max-height: -webkit-calc(100vh - 130px);
   overflow: visible;
   box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
 
